<resources>
    <string name="app_name">Murty Academy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="select_source">Select Source</string>
    <string name="enter_fullname">Please enter Full name</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_address">Enter Address</string>
    <string name="save">Save</string>
    <string name="select_package">Select Package</string>
    <string name="version">Version</string>
    <string name="signIn">Sign In</string>
    <string name="register_mobile">Register Mobile</string>
    <string name="pls_enter_register_mobile">Please enter register mobile</string>
    <string name="password">Password</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="forget_pass">Forget Password ?..</string>
    <string name="name">Name</string>
    <string name="view_profile">View Profile</string>
    <string name="admin">Admin</string>
    <string name="user"></string>
    <string name="app_must_update">App must update</string>
    <string name="app_under_maintenance">App under maintaince</string>
    <string name="server_not_responding">Server not responding</string>
    <string name="plz_chk_your_net">Please check your network..</string>
    <string name="pls_enter_name">Please enter name</string>
    <string name="mobile">Mobile</string>
    <string name="pls_enter_mobile">Please enter mobile</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="pls_enter_forget_password">Please enter forget password</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="role">Role</string>
    <string name="address">Address</string>
    <string name="source_name">Source Name</string>
    <string name="pls_enter_source_name">Please enter source name</string>
    <string name="enter_flore">Enter Flore</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_lat">Enter lat</string>
    <string name="enter_lang">Enter lang</string>
    <string name="no_data_display">No data to display..</string>
    <string name="pls_enter_oldpasswoed">Please enter old password</string>
    <string name="pls_enter_newpasswoed">Please enter new password</string>
    <string name="select_records">Select records</string>
    <string name="profile">Profile</string>
    <string name="changepass">Change PassWord</string>
    <string name="update">Update</string>
    <string name="select_from_date">Select From Date</string>>
    <string name="select_to_date">Select To Date</string>
    <string name="reports">Reports</string>
    <string name="payment_details">Payment Details</string>
    <string name="pls_enter_emial">Please enter email</string>>


    <array name="roles_array">
        <item>Admin</item>
        <item>Super Admin</item>
    </array>


    <array name="billtype_array">
        <item>Select Bill Type</item>
        <item>Free Billing</item>
        <item>Daily Pay</item>
        <item>Weekly Pay</item>
        <item>15 Days Pay</item>
        <item>Monthly Pay</item>
        <item>3 Months Pay</item>
        <item>6 Months Pay</item>
        <item>Yearly Pay</item>
    </array>

    <string-array name="recorde_array">
        <item>Select Cans</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </string-array>

    <array name="mode_array">
        <item>CASH</item>
        <item>Cheque</item>
        <item>Dd</item>
        <item>Transfor</item>
        <item>Other</item>
    </array>


    <string name="google_maps_key">AIzaSyBCA4DR1xphoPTloYCnaoOIQYiVGPO0xmE</string>


</resources>
