<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mar_10"
        android:layout_marginRight="@dimen/mar_10"
        android:gravity="center"
        android:background="@drawable/card_bg"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/Layout_WMHW"
                android:layout_marginBottom="@dimen/mar_10"
                android:layout_marginLeft="@dimen/mar_10"
                android:layout_marginRight="@dimen/mar_10"
                android:layout_marginTop="@dimen/mar_10"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/Txt_WMHW"
                    android:background="@android:color/transparent"
                    android:gravity="start|center"
                    android:text="@string/mobile"
                    android:textSize="@dimen/txt_14" />

                <EditText
                    android:id="@+id/user_id"
                    style="@style/EditTxt_WMH40"
                    android:layout_marginTop="@dimen/mar_4"
                    android:background="@drawable/field_user"
                    android:hint="@string/pls_enter_register_mobile"
                    android:maxLength="50"
                    android:text=""/>

                <TextView
                    style="@style/Txt_WMHW"
                    android:layout_marginTop="@dimen/mar_15"
                    android:background="@android:color/transparent"
                    android:gravity="start|center"
                    android:text="@string/password"
                    android:textSize="@dimen/txt_14" />

                <EditText
                    android:id="@+id/password"
                    style="@style/EditTxt_WMH40"
                    android:layout_marginTop="@dimen/mar_4"
                    android:background="@drawable/field_pass"
                    android:hint="@string/pls_enter_password"
                    android:text=""
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_40"
                    android:layout_marginTop="@dimen/mar_15"
                    android:gravity="center"
                    android:onClick="signIn"
                    android:text="@string/signIn"
                    android:textColor="@color/textWhite"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_40"
                    android:gravity="center"
                    android:onClick="forgetPassword"
                    android:text="@string/forget_pass"
                    android:visibility="gone"/>



                <Button
                    android:id="@+id/version_txt"
                    style="@style/Btn_WMHW"
                    android:layout_marginTop="@dimen/mar_15"
                    android:background="@android:color/transparent"
                    android:gravity="right|center"
                    android:text="@string/version"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_content"
                    android:textSize="@dimen/txt_12"
                    android:textStyle="normal"
                    android:visibility="gone"/>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>